--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Cache-control" content="no-cache" />
     <meta http-equiv="Cache" content="no-cache" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />    
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="stylesheet" href="https://js.arcgis.com/4.20/esri/themes/light/main.css" /> 
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
