--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      // 解决bmob.js报错“global is not defined”的问题
+      if (global === undefined) {
+        var global = window;
+      }
+    </script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
