--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <title>xlong-map-element-plus</title>
+    <title>xlong-map-admin</title>
     <meta name="renderer" content="webkit" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="front-end technicist" content="xLong" />
@@ -12,17 +13,19 @@
     <meta http-equiv="Cache-control" content="no-cache" />
     <meta http-equiv="Cache" content="no-cache" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="https://js.arcgis.com/4.20/esri/themes/light/main.css" /> 
+    <link rel="stylesheet" href="https://js.arcgis.com/4.20/esri/themes/light/main.css" />
     <link rel="icon" href="/favicon.ico" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app"></div>
     <script>
-      // 解决bmob.js报错“global is not defined”的问题
-      if (global === undefined) {
-        var global = window;
-      }
+        // 解决bmob.js报错“global is not defined”的问题
+        if (global === undefined) {
+            var global = window;
+        }
     </script>
     <script type="module" src="/src/main.js"></script>
-  </body>
+</body>
+
 </html>
