--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta http-equiv="Cache" content="no-cache" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="https://js.arcgis.com/4.20/esri/themes/light/main.css" />
-    <link rel="icon" href="/favicon.ico" />
-  <script type="module" crossorigin src="/assets/index.ccec85ca.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.70daa49e.js">
-  <link rel="stylesheet" href="/assets/vendor.859ae72a.css">
-  <link rel="stylesheet" href="/assets/index.f4a29c45.css">
+    <link rel="icon" href="./favicon.ico" />
+  <script type="module" crossorigin src="./assets/index.7111a2ca.js"></script>
+  <link rel="modulepreload" href="./assets/vendor.70daa49e.js">
+  <link rel="stylesheet" href="./assets/vendor.2044f306.css">
+  <link rel="stylesheet" href="./assets/index.87dff689.css">
 </head>
 
 <body>
